<resources>
    <string name="app_name">EvaluacionU1</string>
    <string name="labelName">Nombre/s</string>
    <string name="labelLastName">Apellidos</string>
    <string name="genero">Género</string>
    <string name="direccion">Dirección</string>
    <string name="textCheck">Seleccione el tipo de direccion de despacho:</string>
    <string name="tituloCondiciones">CONDICIONES DE COMPRA Y ENVÍOS</string>
    <string name="condiciones">♡Todas las ventas se realizan únicamente a través de nuestro sitio web www.kawaiitreats.cl *Los envíos a región son realizados los días MIÉRCOLES

*Los envíos dentro de Santiago y a 5ta región son realizados el día JUEVES; . Esto puede ser modificado ante cualquier eventualidad y será anunciado por nuestras redes sociales.

MÉTODOS DE ENVÍO ♡ BLUEXPRESS:  Todos los envíos excluyendo Santiago y 5ta región serán enviados a través de BLUEXPRESS. El tiempo promedio de entrega de encomiendas de BLUEXPRESS es de 3 a 5 días hábiles en regiones y 6 a 7 días hábiles en regiones extremas desde el envío. En algunas ocasiones bluexpress puede determinar no realizar la entrega a domicilio y despacharla a la sucursal mas cercana; a su vez también puede presentar retrasos ocasionales de hasta 10 días hábiles.

Desde el momento que es despachado el paquete a través de bluexpress es responsabilidad del cliente monitorear con el código de seguimiento enviado su encomienda y ante cualquier problema o eventualidad será el cliente quien deba comunicarse con correos de chile para mantener progreso con el envío.

Los envíos con bluexpress son realizados los días MIÉRCOLES EL TIEMPO QUE MANEJA BLUEXPRESS ES DETERMINADO POR ELLOS. Nosotros podemos hacer un estimado, pero no somos la empresa de transporte.

Cualquier demora desde el momento del envío es responsabilidad de la empresa mencionada anteriormente.</string>
    <string name="aceptar">Acepto las condiciones.</string>
</resources>